# BackPropagationNeuralNetworkFramework

./: CMakeLists.txt  README.md
include/: Matrix.hpp  NeuralNetwork.hpp
include/utils/: Fetch_Dataset.hpp  Matrix_Math.hpp
src/: Fetch_Dataset.cpp  Layer.cpp  Matrix.cpp  Matrix_Math.cpp  NeuralNetwork.cpp  Neuron.cpp  main.cpp
